--- a/EnjoyEat/EnjoyEat/wwwroot/css/site.css
+++ b/EnjoyEat/EnjoyEat/wwwroot/css/site.css
@@ -1,18 +1,7 @@
-html {
-  font-size: 14px;
-}
-
-@media (min-width: 768px) {
-  html {
-    font-size: 16px;
-  }
-}
-
-html {
-  position: relative;
-  min-height: 100%;
-}
-
-body {
-  margin-bottom: 60px;
+.fixed-top {
+    position: sticky;
+    top: 0;
+    right: 0;
+    left: 0;
+    z-index: 1030;
 }
