--- a/EnjoyEat/EnjoyEat/wwwroot/css/style.css
+++ b/EnjoyEat/EnjoyEat/wwwroot/css/style.css
@@ -177,8 +177,8 @@ h1, h2, h3, h4, h5, h6 {
   border-bottom: 1px solid rgba(12, 11, 9, 0.6);
   transition: all 0.5s;
   z-index: 997;
+  margin:20px;
   padding: 15px 0;
-  top: 40px;
 }
 
 #header.header-scrolled {
@@ -935,7 +935,9 @@ section {
 }
 
 .menu .menu-content::after {
-  content: "......................................................................" "...................................................................." "....................................................................";
+  content: "......................................................................"
+ "...................................................................."
+ "....................................................................";
   position: absolute;
   left: 20px;
   right: 0;
