_Layout引用Script的連結, css檔設定完成, Header fixed-top

--- a/EnjoyEat/EnjoyEat/Views/Home/Index.cshtml
+++ b/EnjoyEat/EnjoyEat/Views/Home/Index.cshtml
@@ -1,8 +1,367 @@
-﻿@{
-    ViewData["Title"] = "Home Page";
-}
+﻿
+<!-- ======= Hero Section ======= -->
+<section id="hero" class="d-flex align-items-center">
+    <div class="container position-relative text-center text-lg-start" data-aos="zoom-in" data-aos-delay="100">
+        <div class="row">
+            <div class="col-lg-8">
+                <h1>Welcome to <span>EnjoyEat</span></h1>
+                <h2>品味獨特，享受美食之旅！ </h2>
+            </div>
+            <div class="col-lg-4 d-flex align-items-center justify-content-center position-relative" data-aos="zoom-in"
+                 data-aos-delay="200">
+                <a href="https://www.youtube.com/watch?v=yqqN5Yfbkp4" class="glightbox play-btn"></a>
+            </div>
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-</div>
+        </div>
+    </div>
+</section><!-- End Hero -->
+
+<main id="main">
+
+    <!-- ======= Why Us Section ======= -->
+    <section id="why-us" class="why-us">
+        <div class="container" data-aos="fade-up">
+
+            <div class="section-title">
+                <h2>Why Us</h2>
+                <p>為何選擇 Enjoy Eat ?</p>
+            </div>
+
+            <div class="row">
+
+                <div class="col-lg-4">
+                    <div class="box" data-aos="zoom-in" data-aos-delay="100">
+                        <span>01</span>
+                        <h4>卓越的口味體驗</h4>
+                        <p>選擇我們這間餐廳，您將享受到無與倫比的口味盛宴。我們的廚師團隊擁有豐富的烹飪經驗，精選優質食材，烹調出美味絕倫的菜餚，讓您的味蕾與心靈都得到滿足。</p>
+                    </div>
+                </div>
+
+                <div class="col-lg-4 mt-4 mt-lg-0">
+                    <div class="box" data-aos="zoom-in" data-aos-delay="200">
+                        <span>02</span>
+                        <h4>舒適優雅的用餐環境</h4>
+                        <p>我們的餐廳提供一個舒適、優雅的用餐環境，讓您在用餐的同時感受到寧靜和放鬆。無論是與家人、與朋友或是與伴侶前來體驗，我們的餐廳將為您營造出完美的氛圍。</p>
+                    </div>
+                </div>
+
+                <div class="col-lg-4 mt-4 mt-lg-0">
+                    <div class="box" data-aos="zoom-in" data-aos-delay="300">
+                        <span>03</span>
+                        <h4>卓越的服務品質</h4>
+                        <p>我們餐廳的服務團隊以專業、友善和細心聞名。我們的服務員將竭誠為您提供個性化的服務，確保您的用餐體驗無懈可擊，讓您感受到無微不至的關懷和呵護。</p>
+                    </div>
+                </div>
+
+            </div>
+
+        </div>
+    </section><!-- End Why Us Section -->
+
+    <!--Top10 carousul section-->
+    <section id="top-ten" class="top-ten">
+        <div class="container" data-aos="fade-up">
+
+            <div class="section-title">
+                <h2>菜單精選</h2>
+                <p>Enjoy Eat TOP <span style="font-size:50px">10</span> !</p>
+            </div>
+
+            <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
+                <div class="carousel-indicators">
+                    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
+                            aria-current="true" aria-label="Slide 1"></button>
+                    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
+                            aria-label="Slide 2"></button>
+                    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
+                            aria-label="Slide 3"></button>
+                    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="3"
+                            aria-label="Slide 4"></button>
+                    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="4"
+                            aria-label="Slide 5"></button>
+                    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="5"
+                            aria-label="Slide 6"></button>
+                    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="6"
+                            aria-label="Slide 7"></button>
+                    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="7"
+                            aria-label="Slide 8"></button>
+                    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="8"
+                            aria-label="Slide 9"></button>
+                    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="9"
+                            aria-label="Slide 10"></button>
+                </div>
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <img src="..." class="d-block w-100" alt="...">
+                        <div class="carousel-caption d-none d-md-block">
+                            <h5>First slide label</h5>
+                            <p>Some representative placeholder content for the first slide.</p>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <img src="..." class="d-block w-100" alt="...">
+                        <div class="carousel-caption d-none d-md-block">
+                            <h5>Second slide label</h5>
+                            <p>Some representative placeholder content for the second slide.</p>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <img src="..." class="d-block w-100" alt="...">
+                        <div class="carousel-caption d-none d-md-block">
+                            <h5>Third slide label</h5>
+                            <p>Some representative placeholder content for the third slide.</p>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <img src="..." class="d-block w-100" alt="...">
+                        <div class="carousel-caption d-none d-md-block">
+                            <h5>Third slide label</h5>
+                            <p>Some representative placeholder content for the 4 slide.</p>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <img src="..." class="d-block w-100" alt="...">
+                        <div class="carousel-caption d-none d-md-block">
+                            <h5>Third slide label</h5>
+                            <p>Some representative placeholder content for the 5 slide.</p>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <img src="..." class="d-block w-100" alt="...">
+                        <div class="carousel-caption d-none d-md-block">
+                            <h5>Third slide label</h5>
+                            <p>Some representative placeholder content for the 6 slide.</p>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <img src="..." class="d-block w-100" alt="...">
+                        <div class="carousel-caption d-none d-md-block">
+                            <h5>Third slide label</h5>
+                            <p>Some representative placeholder content for the 7 slide.</p>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <img src="..." class="d-block w-100" alt="...">
+                        <div class="carousel-caption d-none d-md-block">
+                            <h5>Third slide label</h5>
+                            <p>Some representative placeholder content for the 8 slide.</p>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <img src="..." class="d-block w-100" alt="...">
+                        <div class="carousel-caption d-none d-md-block">
+                            <h5>Third slide label</h5>
+                            <p>Some representative placeholder content for the 9 slide.</p>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <img src="..." class="d-block w-100" alt="...">
+                        <div class="carousel-caption d-none d-md-block">
+                            <h5>Third slide label</h5>
+                            <p>Some representative placeholder content for the 10 slide.</p>
+                        </div>
+                    </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
+                        data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions"
+                        data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                </button>
+            </div>
+        </div>
+    </section>
+    <!--Top10 carousul section end-->
+    <!-- ======= 最新消息/活動資訊 Section ======= -->
+    <section id="events" class="events">
+        <div class="container" data-aos="fade-up">
+
+            <div class="section-title">
+                <h2>最新消息 / 活動資訊</h2>
+                <p>Enjoy Eat New Events !</p>
+            </div>
+
+            <div class="events-slider swiper-container" data-aos="fade-up" data-aos-delay="100">
+                <div class="swiper-wrapper">
+
+                    <div class="swiper-slide">
+                        <div class="row event-item">
+                            <div class="col-lg-6">
+                                <img src="~/img/event-birthday.jpg" class="img-fluid" alt="">
+                            </div>
+                            <div class="col-lg-6 pt-4 pt-lg-0 content">
+                                <h3>當月壽星特惠服務</h3>
+                                <div class="price">
+                                    <p><span>9折特惠價</span></p>
+                                </div>
+                                <p class="fst-italic">
+                                    慶祝生日是一個特別的時刻，為了讓您的生日更加難忘，我們的餐廳推出了一個特別的生日活動專案。以下是我們為您準備的特惠內容介紹：
+                                </p>
+                                <ul>
+                                    <li>
+                                        <i class="bi bi-check-circled"></i>生日折扣：在您生日的當天，只要攜帶有效身分證明文件，您可以享受全日餐點九折優惠。這是我們對您生日的特別祝福，也是感謝您一年來對我們餐廳的支持。
+                                    </li>
+                                    <li>
+                                        <i class="bi bi-check-circled"></i>生日驚喜甜點：作為生日客人，我們將為您提供一份免費的特製生日驚喜甜點，包含精心製作的蛋糕、冰淇淋或其他美味的甜點選擇。這是我們對您的感謝之意，希望為您的生日增添甜蜜的回憶。
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div><!-- End testimonial item -->
+
+                    <div class="swiper-slide">
+                        <div class="row event-item">
+                            <div class="col-lg-6">
+                                <img src="~/img/event-private.jpg" class="img-fluid" alt="">
+                            </div>
+                            <div class="col-lg-6 pt-4 pt-lg-0 content">
+                                <h3>企業尾牙活動套餐</h3>
+                                <div class="price">
+                                    <p><span>$5,888</span></p>
+                                </div>
+                                <p class="fst-italic">
+                                    非常榮幸能為您介紹我們餐廳為企業尾牙活動所設計的專案內容，以下是專案內容的相關服務介紹：
+                                </p>
+                                <ul>
+                                    <li>
+                                        <i class="bi bi-check-circled"></i>
+                                        客製化尾牙菜單：我們餐廳的廚師團隊將根據您的需求和口味喜好，為您設計一個獨特的尾牙菜單。無論您偏好中式、西式或其他特色菜系，我們都能提供精緻且多樣化的菜品選擇。讓您的尾牙晚宴成為一場美食盛宴，讓與會者留下難忘的印象。
+                                    </li>
+                                    <li>
+                                        <i class="bi bi-check-circled"></i>
+                                        精心佈置的宴會場地：我們擁有寬敞舒適且具有現代感的宴會場地，可容納大型企業尾牙活動。我們將根據您的需求和主題，進行場地佈置，營造出熱鬧、歡樂和奢華的氛圍。提供多種座位配置和音響燈光設備，以確保每位賓客都能享受到最佳的視覺和聽覺體驗。
+                                    </li>
+                                </ul>
+
+                            </div>
+                        </div>
+                    </div><!-- End testimonial item -->
+
+                    <div class="swiper-slide">
+                        <div class="row event-item">
+                            <div class="col-lg-6">
+                                <img src="~/img/event-custom.jpg" class="img-fluid" alt="">
+                            </div>
+                            <div class="col-lg-6 pt-4 pt-lg-0 content">
+                                <h3>母親節特惠活動</h3>
+                                <div class="price">
+                                    <p><span>感謝母愛，共享家庭溫暖！</span></p>
+                                </div>
+                                <p class="fst-italic">
+                                    讓我們一起為至愛的媽媽創造一個難忘的母親節！
+                                </p>
+                                <ul>
+                                    <li>
+                                        <i class="bi bi-check-circled"></i>
+                                        母親節特別菜單：我們的廚師團隊為母親節特別設計了一份精緻菜單，提供各種美味的菜品選擇。從精緻的前菜到豐盛的主菜，以及精心製作的甜點，我們的菜單將為您的母親節用餐體驗帶來獨特的風味和滿足感。
+                                    </li>
+                                    <li>
+                                        <i class="bi bi-check-circled"></i>
+                                        母親節驚喜禮物：作為對母親的感謝和祝福，我們將為每位母親提供一份特別的驚喜禮物。這可能是一個精美的花束、一份特別定製的卡片，或者是其他令人驚喜和感動的禮物，讓母親節更加溫馨和特別。
+                                    </li>
+                                    <li>
+                                        <i class="bi bi-check-circled"></i> 家庭歡樂活動：母親節不僅僅是用餐，更是一個家庭歡樂的時刻。我們將為您提供各種家庭活動，讓您和家人共同創造美好回憶。
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div><!-- End testimonial item -->
+
+                </div>
+                <div class="swiper-pagination"></div>
+            </div>
+
+        </div>
+    </section><!-- End Events Section -->
+    <!-- ======= Gallery Section ======= -->
+    <section id="gallery" class="gallery">
+
+        <div class="container" data-aos="fade-up">
+            <div class="section-title">
+                <h2>店內環境</h2>
+                <p>優雅 放鬆 享受</p>
+            </div>
+        </div>
+
+        <div class="container-fluid" data-aos="fade-up" data-aos-delay="100">
+
+            <div class="row g-0">
+
+                <div class="col-lg-3 col-md-4">
+                    <div class="gallery-item">
+                        <a href="~/img/gallery/gallery-1.jpg" class="gallery-lightbox" data-gall="gallery-item">
+                            <img src="~/img/gallery/gallery-1.jpg" alt="" class="img-fluid">
+                        </a>
+                    </div>
+                </div>
+
+                <div class="col-lg-3 col-md-4">
+                    <div class="gallery-item">
+                        <a href="~/img/gallery/gallery-2.jpg" class="gallery-lightbox" data-gall="gallery-item">
+                            <img src="~/img/gallery/gallery-2.jpg" alt="" class="img-fluid">
+                        </a>
+                    </div>
+                </div>
+
+                <div class="col-lg-3 col-md-4">
+                    <div class="gallery-item">
+                        <a href="~/img/gallery/gallery-3.jpg" class="gallery-lightbox" data-gall="gallery-item">
+                            <img src="~/img/gallery/gallery-3.jpg" alt="" class="img-fluid">
+                        </a>
+                    </div>
+                </div>
+
+                <div class="col-lg-3 col-md-4">
+                    <div class="gallery-item">
+                        <a href="~/img/gallery/gallery-4.jpg" class="gallery-lightbox" data-gall="gallery-item">
+                            <img src="~/img/gallery/gallery-4.jpg" alt="" class="img-fluid">
+                        </a>
+                    </div>
+                </div>
+
+                <div class="col-lg-3 col-md-4">
+                    <div class="gallery-item">
+                        <a href="~/img/gallery/gallery-5.jpg" class="gallery-lightbox" data-gall="gallery-item">
+                            <img src="~/img/gallery/gallery-5.jpg" alt="" class="img-fluid">
+                        </a>
+                    </div>
+                </div>
+
+                <div class="col-lg-3 col-md-4">
+                    <div class="gallery-item">
+                        <a href="~/img/gallery/gallery-6.jpg" class="gallery-lightbox" data-gall="gallery-item">
+                            <img src="~/img/gallery/gallery-6.jpg" alt="" class="img-fluid">
+                        </a>
+                    </div>
+                </div>
+
+                <div class="col-lg-3 col-md-4">
+                    <div class="gallery-item">
+                        <a href="~/img/gallery/gallery-7.jpg" class="gallery-lightbox" data-gall="gallery-item">
+                            <img src="~/img/gallery/gallery-7.jpg" alt="" class="img-fluid">
+                        </a>
+                    </div>
+                </div>
+
+                <div class="col-lg-3 col-md-4">
+                    <div class="gallery-item">
+                        <a href="~/img/gallery/gallery-8.jpg" class="gallery-lightbox" data-gall="gallery-item">
+                            <img src="~/img/gallery/gallery-8.jpg" alt="" class="img-fluid">
+                        </a>
+                    </div>
+                </div>
+
+            </div>
+
+        </div>
+    </section><!-- End Gallery Section -->
+
+</main><!-- End #main -->
+
+@section Scripts {
+    <script></script>
+}
