--- a/EnjoyEat/EnjoyEat/Views/Shared/_Layout.cshtml
+++ b/EnjoyEat/EnjoyEat/Views/Shared/_Layout.cshtml
@@ -26,18 +26,18 @@
     <link href="~/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
 
     <!-- Template Main CSS File -->
-    <link href="~/css/style.css" rel="stylesheet">
+    <link href="~/css/style.min.css" rel="stylesheet">
 
     <!--預設檔案-->
-    <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
+    @*<link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />*@
     @await RenderSectionAsync("Styles", required: false)
 </head>
 <body>
     <!-- ======= Header ======= -->
-    <header id="header" class="fixed-top d-flex align-items-center">
+    <header id="header" class="sticky-top d-flex align-items-center">
         <div class="container-fluid container-xl d-flex align-items-center justify-content-lg-between">
 
-            <h1 class="logo me-auto me-lg-0"><a href="index.html">享食 Enjoy Eat</a></h1>
+            <h1 class="logo me-auto me-lg-0"><a asp-controller="Home" asp-action="Index">享食 Enjoy Eat</a></h1>
             <!-- Uncomment below if you prefer to use an image logo -->
             <!-- <a href="index.html" class="logo me-auto me-lg-0"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
 
@@ -56,8 +56,6 @@
 
         </div>
     </header><!-- End Header -->
-
-    @*<section id="hero" class=" align-items-center"></section>*@
     <div class="container">
         <main role="main" class="pb-3">
             @RenderBody()
@@ -95,7 +93,7 @@
 
                     <div class="col-lg-3 col-md-6 footer-links">
                         <ul>
-                            <li><i class="bx bx-chevron-right"></i> <a href="#">Home</a></li>
+                            <li><i class="bx bx-chevron-right"></i> <a asp-controller="Home" asp-action="Index">Home</a></li>
                             <li><i class="bx bx-chevron-right"></i> <a href="#">關於我們</a></li>
                             <li><i class="bx bx-chevron-right"></i> <a href="#">聯絡我們</a></li>
                             <li><i class="bx bx-chevron-right"></i> <a href="#">最新消息</a></li>
@@ -104,7 +102,7 @@
 
                     <div class="col-lg-3 col-md-6 footer-links">
                         <ul>
-                            <li><i class="bx bx-chevron-right"></i> <a href="#">菜單</a></li>
+                            <li><i class="bx bx-chevron-right"></i> <a asp-controller="Menu" asp-action="Index">菜單</a></li>
                             <li><i class="bx bx-chevron-right"></i> <a href="#">內用訂餐</a></li>
                             <li><i class="bx bx-chevron-right"></i> <a href="#">外帶訂餐</a></li>
 
@@ -130,10 +128,26 @@
                     <!-- You can delete the links only if you purchased the pro version. -->
                     <!-- Licensing information: https://bootstrapmade.com/license/ -->
                     <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/restaurantly-restaurant-template/ -->
-                    Designed by Team6</a>
+                    <a>Designed by Team6</a>
                 </div>
             </div>
+        </div>
     </footer><!-- End Footer -->
+    <div id="preloader"></div>
+    <a href="#" class="back-to-top d-flex align-items-center justify-content-center">
+        <i class="bi bi-arrow-up-short"></i>
+    </a>
+
+    <!-- Vendor JS Files -->
+    <script src="~/vendor/aos/aos.js"></script>
+    <script src="~/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="~/vendor/glightbox/js/glightbox.min.js"></script>
+    <script src="~/vendor/isotope-layout/isotope.pkgd.min.js"></script>
+    <script src="~/vendor/php-email-form/validate.js"></script>
+    <script src="~/vendor/swiper/swiper-bundle.min.js"></script>
+
+    <!-- Template Main JS File -->
+    <script src="~/js/main.js"></script>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
