加入font-awesome，OrderForHere畫面修正，_Layout 主廚推薦top10文字修改,加入測試圖片

--- a/EnjoyEat/EnjoyEat/Views/OrderForHere/Index.cshtml
+++ b/EnjoyEat/EnjoyEat/Views/OrderForHere/Index.cshtml
@@ -1,4 +1,7 @@
-﻿
+﻿@section Styles{
+	<link href="~/font-awesome/css/all.min.css" rel="stylesheet" />
+}
+
 
 <div id="cartList" v-cloak>
     <div class="scrollregion">
@@ -15,8 +18,7 @@
 
         <fieldset class="mx-3 my-4">
             <legend class="p-3">
-                    <i class="fa-sharp fa-solid fa-cart-shopping"></i>
-                    <b>購物車</b>
+                <b><i class="fas fa-shopping-cart"></i> 購物車</b>
             </legend>
             <!-- 購物車清單 -->
             <div class="container-fluid">
