--- a/EnjoyEat/EnjoyEat/Views/Home/Index.cshtml
+++ b/EnjoyEat/EnjoyEat/Views/Home/Index.cshtml
@@ -63,7 +63,7 @@
 
             <div class="section-title">
                 <h2>菜單精選</h2>
-                <p>Enjoy Eat TOP <span style="font-size:50px">10</span> !</p>
+                <p>主廚推薦 TOP <span style="font-size:50px">10</span> !</p>
             </div>
 
             <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
@@ -89,75 +89,45 @@
                     <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="9"
                             aria-label="Slide 10"></button>
                 </div>
+
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <img src="..." class="d-block w-100" alt="...">
-                        <div class="carousel-caption d-none d-md-block">
-                            <h5>First slide label</h5>
-                            <p>Some representative placeholder content for the first slide.</p>
+                        <div class="row">
+                            <div class="col-md-6">
+                                <img src="~/img/specials-1.png" class="d-block w-100" alt="Image 1">
+                            </div>
+                            <div class="col-md-6">
+                                <div class="carousel-caption">
+                                    <h3>Caption 1</h3>
+                                    <p>Description 1</p>
+                                </div>
+                            </div>
                         </div>
                     </div>
                     <div class="carousel-item">
-                        <img src="..." class="d-block w-100" alt="...">
-                        <div class="carousel-caption d-none d-md-block">
-                            <h5>Second slide label</h5>
-                            <p>Some representative placeholder content for the second slide.</p>
+                        <div class="row">
+                            <div class="col-md-6">
+                                <img src="~/img/specials-2.png" class="d-block w-100" alt="Image 2">
+                            </div>
+                            <div class="col-md-6">
+                                <div class="carousel-caption">
+                                    <h3>Caption 2</h3>
+                                    <p>Description 2</p>
+                                </div>
+                            </div>
                         </div>
                     </div>
                     <div class="carousel-item">
-                        <img src="..." class="d-block w-100" alt="...">
-                        <div class="carousel-caption d-none d-md-block">
-                            <h5>Third slide label</h5>
-                            <p>Some representative placeholder content for the third slide.</p>
-                        </div>
-                    </div>
-                    <div class="carousel-item">
-                        <img src="..." class="d-block w-100" alt="...">
-                        <div class="carousel-caption d-none d-md-block">
-                            <h5>Third slide label</h5>
-                            <p>Some representative placeholder content for the 4 slide.</p>
-                        </div>
-                    </div>
-                    <div class="carousel-item">
-                        <img src="..." class="d-block w-100" alt="...">
-                        <div class="carousel-caption d-none d-md-block">
-                            <h5>Third slide label</h5>
-                            <p>Some representative placeholder content for the 5 slide.</p>
-                        </div>
-                    </div>
-                    <div class="carousel-item">
-                        <img src="..." class="d-block w-100" alt="...">
-                        <div class="carousel-caption d-none d-md-block">
-                            <h5>Third slide label</h5>
-                            <p>Some representative placeholder content for the 6 slide.</p>
-                        </div>
-                    </div>
-                    <div class="carousel-item">
-                        <img src="..." class="d-block w-100" alt="...">
-                        <div class="carousel-caption d-none d-md-block">
-                            <h5>Third slide label</h5>
-                            <p>Some representative placeholder content for the 7 slide.</p>
-                        </div>
-                    </div>
-                    <div class="carousel-item">
-                        <img src="..." class="d-block w-100" alt="...">
-                        <div class="carousel-caption d-none d-md-block">
-                            <h5>Third slide label</h5>
-                            <p>Some representative placeholder content for the 8 slide.</p>
-                        </div>
-                    </div>
-                    <div class="carousel-item">
-                        <img src="..." class="d-block w-100" alt="...">
-                        <div class="carousel-caption d-none d-md-block">
-                            <h5>Third slide label</h5>
-                            <p>Some representative placeholder content for the 9 slide.</p>
-                        </div>
-                    </div>
-                    <div class="carousel-item">
-                        <img src="..." class="d-block w-100" alt="...">
-                        <div class="carousel-caption d-none d-md-block">
-                            <h5>Third slide label</h5>
-                            <p>Some representative placeholder content for the 10 slide.</p>
+                        <div class="row">
+                            <div class="col-md-6">
+                                <img src="~/img/specials-3.png" class="d-block w-100" alt="Image 3">
+                            </div>
+                            <div class="col-md-6">
+                                <div class="carousel-caption">
+                                    <h3>Caption 3</h3>
+                                    <p>Description 3</p>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
