加入用戶端程式庫 vue, axios

--- a/EnjoyEat/EnjoyEat/Views/Home/Index.cshtml
+++ b/EnjoyEat/EnjoyEat/Views/Home/Index.cshtml
@@ -1,4 +1,22 @@
-﻿<!-- ======= Hero Section ======= -->
+﻿@section Styles{
+    <style>
+        .toptenitem{
+            margin-top: 80px;
+        }
+
+        .toptenitem p {
+            font-size: 25px;
+        }
+
+        .toptenimg{
+            width: 200px;
+            height: 400px;
+        }
+    </style>
+}
+
+
+<!-- ======= Hero Section ======= -->
 <section id="hero" class="d-flex align-items-center">
     <div class="container position-relative text-center text-lg-start" data-aos="zoom-in" data-aos-delay="100">
         <div class="row">
@@ -93,39 +111,42 @@
                 <div class="carousel-inner">
                     <div class="carousel-item active">
                         <div class="row">
-                            <div class="col-md-6">
-                                <img src="~/img/specials-1.png" class="d-block w-100" alt="Image 1">
+                            <div class="col-md-7">
+                                <img src="~/img/specials-1.png" class="toptenimg d-block w-100" alt="Image 1">
                             </div>
-                            <div class="col-md-6">
+                            <div class="toptenitem col-md-5">
+                                <h3>推薦餐點 TOP<span style="font-size:35px">  1</span></h3><br>
+                                <h4>薑絲嚕嚕咪</h4>
+                                <p>Price: $400 </p><br>
                                 <div class="carousel-caption">
-                                    <h3>Caption 1</h3>
-                                    <p>Description 1</p>
                                 </div>
                             </div>
                         </div>
                     </div>
                     <div class="carousel-item">
                         <div class="row">
-                            <div class="col-md-6">
-                                <img src="~/img/specials-2.png" class="d-block w-100" alt="Image 2">
+                            <div class="col-md-7">
+                                <img src="~/img/specials-2.png" class="toptenimg d-block w-100" alt="Image 2">
                             </div>
-                            <div class="col-md-6">
+                            <div class="toptenitem col-md-5">
+                                <h3>推薦餐點 TOP<span style="font-size:35px">  2</span></h3><br>
+                                <h4>雨傘節沙拉</h4>
+                                <p>Price: $150</p>
                                 <div class="carousel-caption">
-                                    <h3>Caption 2</h3>
-                                    <p>Description 2</p>
                                 </div>
                             </div>
                         </div>
                     </div>
                     <div class="carousel-item">
                         <div class="row">
-                            <div class="col-md-6">
-                                <img src="~/img/specials-3.png" class="d-block w-100" alt="Image 3">
+                            <div class="col-md-7">
+                                <img src="~/img/specials-3.png" class="toptenimg d-block w-100" alt="Image 3">
                             </div>
-                            <div class="col-md-6">
+                            <div class="toptenitem col-md-5">
+                                <h3>推薦餐點 TOP<span style="font-size:35px">  3</span></h3><br>
+                                <h3>膽汁牛肉麵</h3>
+                                <p>Price: $250</p>
                                 <div class="carousel-caption">
-                                    <h3>Caption 3</h3>
-                                    <p>Description 3</p>
                                 </div>
                             </div>
                         </div>
