--- a/EnjoyEat/EnjoyEat/Views/OrderForHere/Index.cshtml
+++ b/EnjoyEat/EnjoyEat/Views/OrderForHere/Index.cshtml
@@ -10,7 +10,7 @@
             <div class="container col userarea">
                 <div class="title w-100">
                     <div class="himessage">
-                        <p>Hi, 顧客或會員</p>
+                        <p>Hi, 顧客或會員, 請選擇您的餐點</p>
                     </div>
                 </div>
             </div>
