--- a/EnjoyEat/EnjoyEat/Views/CheckoutPage/Index.cshtml
+++ b/EnjoyEat/EnjoyEat/Views/CheckoutPage/Index.cshtml
@@ -1,106 +1,22 @@
-﻿@model IEnumerable<EnjoyEat.Models.OrderDetail>
-
+﻿@using System.Composition
 @{
-    Layout = null;
+    Layout = "_Layout";
 }
 
-<!DOCTYPE html>
-<html lang="zh-TW">
-<head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>訂單結帳</title>
-    <meta content="" name="description" />
-    <meta content="" name="keywords" />
-
-    <!-- Favicons -->
-    <link href="~/img/favicon.png" rel="icon" />
-    <link href="~/img/apple-touch-icon.png" rel="apple-touch-icon" />
-
-    <!-- Google Fonts -->
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Playfair+Display:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i"
-          rel="stylesheet" />
-
-    <!-- Vendor CSS Files -->
-    <link href="~/vendor/animate.css/animate.min.css" rel="stylesheet" />
-    <link href="~/vendor/aos/aos.css" rel="stylesheet" />
-    <link href="~/vendor/bootstrap/css/bootstrap.min.css"
-          rel="stylesheet" />
-    <link href="~/vendor/bootstrap-icons/bootstrap-icons.css"
-          rel="stylesheet" />
-    <link href="~/vendor/boxicons/css/boxicons.min.css" rel="stylesheet" />
-    <link href="~/vendor/glightbox/css/glightbox.min.css"
-          rel="stylesheet" />
-    <link href="~/vendor/swiper/swiper-bundle.min.css" rel="stylesheet" />
-    
-
-    <!-- Template Main CSS File -->
-    <link href="~/css/style.css" rel="stylesheet" />
-    <link href="~/css/checkoutpagestyle.css" rel="stylesheet" />
-</head>
+@section Styles{
+    <style>
+        <link href="~/css/style.css" rel="stylesheet" / >
+        <link href="~/css/checkoutpagestyle.css" rel="stylesheet" / >
+    </style>
+}
 <body>
-    <section id="hero" class="align-items-center overflow-auto">
-        <!-- ======= Header ======= -->
-        <header id="header" class="sticky-top d-flex align-items-center">
-            <div class="container-fluid container-xl d-flex align-items-center justify-content-lg-between">
-                <h1 class="logo me-auto me-lg-0">
-                    <a href="index.html">Restaurantly</a>
-                </h1>
-                <!-- Uncomment below if you prefer to use an image logo -->
-                <!-- <a href="index.html" class="logo me-auto me-lg-0"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
-
-                <nav id="navbar" class="navbar order-last order-lg-0">
-                    <ul>
-                        <li><a class="nav-link scrollto" href="#hero">Home</a></li>
-                        <li><a class="nav-link scrollto" href="#about">About</a></li>
-                        <li><a class="nav-link scrollto" href="#menu">Menu</a></li>
-                        <li>
-                            <a class="nav-link scrollto" href="#specials">Specials</a>
-                        </li>
-                        <li><a class="nav-link scrollto" href="#events">Events</a></li>
-                        <li><a class="nav-link scrollto" href="#chefs">Chefs</a></li>
-                        <li><a class="nav-link scrollto" href="#gallery">Gallery</a></li>
-                        <li class="dropdown">
-                            <a href="#">
-                                <span>Drop Down</span> <i class="bi bi-chevron-down"></i>
-                            </a>
-                            <ul>
-                                <li><a href="#">Drop Down 1</a></li>
-                                <li class="dropdown">
-                                    <a href="#">
-                                        <span>Deep Drop Down</span>
-                                        <i class="bi bi-chevron-right"></i>
-                                    </a>
-                                    <ul>
-                                        <li><a href="#">Deep Drop Down 1</a></li>
-                                        <li><a href="#">Deep Drop Down 2</a></li>
-                                        <li><a href="#">Deep Drop Down 3</a></li>
-                                        <li><a href="#">Deep Drop Down 4</a></li>
-                                        <li><a href="#">Deep Drop Down 5</a></li>
-                                    </ul>
-                                </li>
-                                <li><a href="#">Drop Down 2</a></li>
-                                <li><a href="#">Drop Down 3</a></li>
-                                <li><a href="#">Drop Down 4</a></li>
-                            </ul>
-                        </li>
-                        <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
-                    </ul>
-                    <i class="bi bi-list mobile-nav-toggle"></i>
-                </nav>
-                <!-- .navbar -->
-                <a href="#book-a-table"
-                   class="book-a-table-btn scrollto d-none d-lg-flex">Book a table</a>
-            </div>
-        </header>
-        <!-- End Header -->
+   
         <!--======= Container =======-->
 
-        <div class="container position-relative text-center text-lg-start"
+        <div class="container position-relative text-center text-lg-start border border-dark"
              data-aos="zoom-in"
              data-aos-delay="100">
-            <div name="content-body"
+            <div name="content"
                  oncontextmenu="return false"
                  class="snippet-body">
                 <div class="d-flex flex-column justify-content-center align-items-center bg-dark"
@@ -111,7 +27,7 @@
 
                     <div class="pt-1">
                         <p>
-                            Order #12615 is currently<b class="text-dark"> processing</b>
+                            Order #12615 is currently<b class="text-light"><i> processing</i></b>
                         </p>
                     </div>
                 </div>
@@ -269,138 +185,9 @@
             </div>
         </div>
 
-        <!-- End Container -->
-        <!-- ======= Footer ======= -->
-        <footer id="footer">
-            <div class="footer-top">
-                <div class="container">
-                    <div class="row">
-                        <div class="col-lg-3 col-md-6">
-                            <div class="footer-info">
-                                <h3>Restaurantly</h3>
-                                <p>
-                                    A108 Adam Street <br />
-                                    NY 535022, USA<br /><br />
-                                    <strong>Phone:</strong> +1 5589 55488 55<br />
-                                    <strong>Email:</strong> info@example.com<br />
-                                </p>
-                                <div class="social-links mt-3">
-                                    <a href="#" class="twitter">
-                                        <i class="bx bxl-twitter"></i>
-                                    </a>
-                                    <a href="#" class="facebook">
-                                        <i class="bx bxl-facebook"></i>
-                                    </a>
-                                    <a href="#" class="instagram">
-                                        <i class="bx bxl-instagram"></i>
-                                    </a>
-                                    <a href="#" class="google-plus">
-                                        <i class="bx bxl-skype"></i>
-                                    </a>
-                                    <a href="#" class="linkedin">
-                                        <i class="bx bxl-linkedin"></i>
-                                    </a>
-                                </div>
-                            </div>
-                        </div>
-
-                        <div class="col-lg-2 col-md-6 footer-links">
-                            <h4>Useful Links</h4>
-                            <ul>
-                                <li>
-                                    <i class="bx bx-chevron-right"></i> <a href="#">Home</a>
-                                </li>
-                                <li>
-                                    <i class="bx bx-chevron-right"></i> <a href="#">About us</a>
-                                </li>
-                                <li>
-                                    <i class="bx bx-chevron-right"></i> <a href="#">Services</a>
-                                </li>
-                                <li>
-                                    <i class="bx bx-chevron-right"></i>
-                                    <a href="#">Terms of service</a>
-                                </li>
-                                <li>
-                                    <i class="bx bx-chevron-right"></i>
-                                    <a href="#">Privacy policy</a>
-                                </li>
-                            </ul>
-                        </div>
-
-                        <div class="col-lg-3 col-md-6 footer-links">
-                            <h4>Our Services</h4>
-                            <ul>
-                                <li>
-                                    <i class="bx bx-chevron-right"></i>
-                                    <a href="#">Web Design</a>
-                                </li>
-                                <li>
-                                    <i class="bx bx-chevron-right"></i>
-                                    <a href="#">Web Development</a>
-                                </li>
-                                <li>
-                                    <i class="bx bx-chevron-right"></i>
-                                    <a href="#">Product Management</a>
-                                </li>
-                                <li>
-                                    <i class="bx bx-chevron-right"></i>
-                                    <a href="#">Marketing</a>
-                                </li>
-                                <li>
-                                    <i class="bx bx-chevron-right"></i>
-                                    <a href="#">Graphic Design</a>
-                                </li>
-                            </ul>
-                        </div>
-
-                        <div class="col-lg-4 col-md-6 footer-newsletter">
-                            <h4>Our Newsletter</h4>
-                            <p>
-                                Tamen quem nulla quae legam multos aute sint culpa legam
-                                noster magna
-                            </p>
-                            <form action="" method="post">
-                                <input type="email" name="email" /><input type="submit"
-                                                                          value="Subscribe" />
-                            </form>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-            <div class="container">
-                <div class="copyright">
-                    &copy; Copyright <strong><span>Restaurantly</span></strong>. All Rights Reserved
-                </div>
-                <div class="credits">
-                    <!-- All the links in the footer should remain intact. -->
-                    <!-- You can delete the links only if you purchased the pro version. -->
-                    <!-- Licensing information: https://bootstrapmade.com/license/ -->
-                    <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/restaurantly-restaurant-template/ -->
-                    Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
-                </div>
-            </div>
-        </footer>
-        <!-- End Footer -->
-    </section>
-    <div id="preloader"></div>
-    <a href="#"
-       class="back-to-top d-flex align-items-center justify-content-center">
-        <i class="bi bi-arrow-up-short"></i>
-    </a>
-
-    <!-- Vendor JS Files -->
-    <script src="assets/vendor/aos/aos.js"></script>
-    <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-    <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
-    <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
-    <script src="assets/vendor/php-email-form/validate.js"></script>
-    <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
-    <script type="text/javascript"
-            src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
-
-    <!-- Template Main JS File -->
-    <script src="assets/js/main.js"></script>
+    <!-- End Container -->
+    
 </body>
 </html>
+
 
