--- a/EnjoyEat/EnjoyEat/Views/Shared/_Layout.cshtml
+++ b/EnjoyEat/EnjoyEat/Views/Shared/_Layout.cshtml
@@ -47,7 +47,7 @@
                     <li><a class="nav-link scrollto" asp-controller="Menu" asp-action="Index">菜單</a></li>
                     <li><a class="nav-link scrollto" href="">最新消息</a></li>
                     <li><a class="nav-link scrollto" href="">訂位</a></li>
-                    <li><a class="nav-link scrollto" asp-controller="OrderForHere" asp-action="Index">內用點餐</a></li>
+                    <li><a class="nav-link scrollto" asp-area="OrderForHere" asp-controller="OrderForHere" asp-action="Index">內用點餐</a></li>
                     <li><a class="nav-link scrollto" href="">外帶訂餐</a></li>
                     <li><a class="nav-link scrollto" href="">聯絡我們</a></li>
                     <li><a class="nav-link scrollto" href="">會員登入</a></li>
