--- a/EnjoyEat/EnjoyEat/Areas/backend/Views/Shared/_Layout.cshtml
+++ b/EnjoyEat/EnjoyEat/Areas/backend/Views/Shared/_Layout.cshtml
@@ -2,7 +2,7 @@
 <html lang="zh-tw">
 <head>
     <meta charset="utf-8">
-    <title>享食餐廳 後臺管理</title>
+    <title>享食後台</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="" name="keywords">
     <meta content="" name="description">
@@ -21,11 +21,11 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css" rel="stylesheet">
 
     <!-- Libraries Stylesheet -->
-    <link href="~/backend/owl.carousel.min.css" rel="stylesheet">
-    <link href="~/backend/css/tempusdominus-bootstrap-4.min.css" rel="stylesheet" />
+    <link href="~/backend/lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
+    <link href="~/backend/lib/tempusdominus/css/tempusdominus-bootstrap-4.min.css" rel="stylesheet" />
 
     <!-- Customized Bootstrap Stylesheet -->
-    <link href="~/backend/bootstrap.min.css" rel="stylesheet">
+    <link href="~/backend/bootstrap/bootstrap.min.css" rel="stylesheet">
 
     <!-- Template Stylesheet -->
     <link href="~/backend/css/style.css" rel="stylesheet">
@@ -79,29 +79,13 @@
             </div>
         </nav>
         <!-- Navbar End -->
-        <!-- Sign In Start -->
-        <div class="container-fluid">
-            <div class="row h-100 align-items-center justify-content-center">
-                <div class="col-12 ">
-                    <div class="bg-secondary rounded p-4 p-sm-5 my-4 mx-3">
-                        <div class="d-flex align-items-center justify-content-between mb-3">
-                            <h3 class="text-primary"><i class="fa fa-user-edit me-2"></i>後臺管理</h3>
-                            <h3>登入</h3>
-                        </div>
-                        <div class="form-floating mb-3">
-                            <input type="email" class="form-control" id="floatingInput" placeholder="帳號" required>
-                            <label for="floatingInput">員工帳號</label>
-                        </div>
-                        <div class="form-floating mb-4">
-                            <input type="password" class="form-control" id="floatingPassword" placeholder="密碼" required>
-                            <label for="floatingPassword">員工密碼</label>
-                        </div>
-                        <button type="submit" class="btn btn-primary py-3 w-100 mb-4">登入</button>
-                    </div>
-                </div>
-            </div>
+        <div class="container">
+            <main role="main" class="pb-3">
+                @RenderBody()
+            </main>
         </div>
-        <!-- Table End -->
+
+
         <!-- Footer Start -->
         <div class="container-fluid pt-4 px-4">
             <div class="bg-secondary rounded-top p-4">
@@ -111,7 +95,7 @@
                     </div>
                     <div class="col-12 col-sm-6 text-center text-sm-end">
                         <!--/*** This template is free as long as you keep the footer author’s credit link/attribution link/backlink. If you'd like to use the template without the footer author’s credit link/attribution link/backlink, you can purchase the Credit Removal License from "https://htmlcodex.com/credit-removal". Thank you for your support. ***/-->
-                        Designed By <a href="https://htmlcodex.com">THM101 Team6</a>
+                        Designed By <a href="#">THM101 Team6</a>
                         <br>
                     </div>
                 </div>
@@ -121,11 +105,7 @@
     <!-- Content End -->
 
 
-    <div class="container">
-        <main role="main" class="pb-3">
-            @RenderBody()
-        </main>
-    </div>
+
 
     <!-- JavaScript Libraries -->
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
@@ -140,5 +120,6 @@
 
     <!-- Template Javascript -->
     <script src="~/backend/js/main.js"></script>
+    @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
