--- a/EnjoyEat/EnjoyEat/Views/CheckoutPage/Index.cshtml
+++ b/EnjoyEat/EnjoyEat/Views/CheckoutPage/Index.cshtml
@@ -4,190 +4,188 @@
 }
 
 @section Styles{
-    <style>
-        <link href="~/css/style.css" rel="stylesheet" / >
-        <link href="~/css/checkoutpagestyle.css" rel="stylesheet" / >
-    </style>
+
+  <link href="~/css/style.css" rel="stylesheet" / >
+  <link href="~/css/checkoutpagestyle.css" rel="stylesheet" / >
+  <link href="~/font-awesome/css/all.min.css" rel="stylesheet" />
 }
-<body>
-   
+<content_body>   
         <!--======= Container =======-->
-
-        <div class="container position-relative text-center text-lg-start border border-dark"
-             data-aos="zoom-in"
-             data-aos-delay="100">
-            <div name="content"
-                 oncontextmenu="return false"
-                 class="snippet-body">
-                <div class="d-flex flex-column justify-content-center align-items-center bg-dark"
-                     id="order-heading">
-                    <div class="text-uppercase">
-                        <p>Order detail</p>
-                    </div>
-
-                    <div class="pt-1">
-                        <p>
-                            Order #12615 is currently<b class="text-light"><i> processing</i></b>
-                        </p>
-                    </div>
-                </div>
-                <div class="wrapper">
-                    <div class="table-responsive">
-                        <table class="table table-borderless">
-                            <thead>
-                                <tr class="text-uppercase text-muted">
-                                    <th scope="col">product</th>
-                                    <th scope="col" class="text-right">total</th>
+       <div class="iphone">
+        <header class="form_header">
+            <h1>Checkout</h1>
+        </header>
+        <div class="container position-relative "
+                 data-aos="zoom-in"
+                 data-aos-delay="100">
+               
+                <div name="content"
+                     oncontextmenu="return false"
+                     class="snippet-body">
+                     <!--標題區塊-->
+                     <!--分隔線-->
+                     <div class="pt-2 border-bottom mb-3"></div>
+                     <div class="d-flex flex-column justify-content-between text-dark"
+                             id="order-heading">
+                          <div class="text-uppercase text-center">
+                                <p class="text-dark border border-2">訂單明細</p>
+                          </div>
+                          <div class="row">
+                                <div class="col text-start">訂單編號</div>
+                                <div class="col text-center">桌號</div>
+                                <div class="col text-center">人數</div>
+                           </div>
+                           <div class="row">
+                               <div class="col text-start">777777</div>
+                               <div class="col text-center">6666</div>
+                               <div class="col text-center">10</div>
+                           </div>
+                           <br />
+                           <div class="row">
+                               <div class="col text-start">送出時間</div>
+                               <div class="col text-center">訂單狀態</div>
+                               <div class="col text-center">品項數</div>
+                           </div>
+                           <div class="row">
+                                <div class="col text-start">
+                                 @{DateTime Now = DateTime.Now;} 
+                                 @Now
+                                </div>
+                                <div class="col text-center">處理中</div>
+                                <div class="col text-center">4</div>
+                           </div>
+                <!--分隔線-->
+                <div class="pt-2 border-bottom mb-3"></div>
+                <!--內容區塊-->
+                    <div class="wrapper">
+                        <div class="table-responsive">
+                            <table class="table table-borderless ">
+                                <thead>
+                                    <tr class="text-uppercase text-muted">
+                                        <th scope="col">餐點清單</th>
+                                        <th scope="col" class="text-center">數量</th>
+                                        <th scope="col" class="text-center">小計</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    <tr>
+                                        <th scope="row">                                      
+                                             <span>
+                                                <img src="https://images.pexels.com/photos/206959/pexels-photo-206959.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500"
+                                                 alt="apple"
+                                                 class="rounded-circle"
+                                                 width="30"
+                                                 height="30" />
+                                            </span>Babyblends: 1meal/day
+                                        </th>
+                                        <td> <b>1</b></td>
+                                        <td> <b>$69.86</b></td>
+                                    </tr>
+                                    <tr>
+                                    <th scope="row">
+                                        <span>
+                                            <img src="https://images.pexels.com/photos/206959/pexels-photo-206959.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500"
+                                                 alt="apple"
+                                                 class="rounded-circle"
+                                                 width="30"
+                                                 height="30" />
+                                        </span>Babyblends: 1meal/day
+                                    </th>
+                                    <td><b>1</b></td>
+                                    <td><b>$69.86</b></td>
                                 </tr>
-                            </thead>
-                            <tbody>
                                 <tr>
-                                    <th scope="row">Babyblends: 1meal/day</th>
-                                    <td class="text-right"><b>$69.86</b></td>
+                                    <th scope="row">
+                                        <span>
+                                            <img src="https://images.pexels.com/photos/206959/pexels-photo-206959.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500"
+                                                 alt="apple"
+                                                 class="rounded-circle"
+                                                 width="30"
+                                                 height="30" />
+                                        </span>Babyblends: 1meal/day
+                                    </th>
+                                    <td><b>1</b></td>
+                                    <td><b>$69.86</b></td>
                                 </tr>
-                            </tbody>
-                        </table>
-                    </div>
-                    <div class="d-flex justify-content-start align-items-center list py-1">
-                        <div><b>1px</b></div>
-                        <div class="mx-3">
-                            <img src="https://images.pexels.com/photos/206959/pexels-photo-206959.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500"
-                                 alt="apple"
-                                 class="rounded-circle"
-                                 width="30"
-                                 height="30" />
+                                <tr>
+                                    <th scope="row">
+                                        <span>
+                                            <img src="https://images.pexels.com/photos/206959/pexels-photo-206959.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500"
+                                                 alt="apple"
+                                                 class="rounded-circle"
+                                                 width="30"
+                                                 height="30" />
+                                        </span>Babyblends: 1meal/day
+                                    </th>
+                                    <td><b>1</b></td>
+                                    <td><b>$69.86</b></td>
+                                </tr>
+                                </tbody>
+                            </table>
                         </div>
-                        <div class="order-item">Apple</div>
-                    </div>
-                    <div class="d-flex justify-content-start align-items-center list my-2 py-1">
-                        <div><b>4px</b></div>
-                        <div class="mx-3">
-                            <img src="https://images.unsplash.com/photo-1602081593819-65e7a8cee0dd?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1050&q=80"
-                                 alt="apple"
-                                 class="rounded-circle"
-                                 width="30"
-                                 height="30" />
-                        </div>
-                        <div class="order-item">Mango</div>
-                    </div>
-                    <div class="d-flex justify-content-start align-items-center list my-2 py-1">
-                        <div><b>2px</b></div>
-                        <div class="mx-3">
-                            <img src="https://images.unsplash.com/photo-1584183187885-071d53d42531?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60"
-                                 alt="apple"
-                                 class="rounded-circle"
-                                 width="30"
-                                 height="30" />
-                        </div>
-                        <div class="order-item">Carrot Apple Ginger</div>
-                    </div>
-                    <div class="d-flex justify-content-start align-items-center list my-2 py-1">
-                        <div><b>3px</b></div>
-                        <div class="mx-3">
-                            <img src="https://images.unsplash.com/photo-1602096934878-5028bf10ca50?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60"
-                                 alt="apple"
-                                 class="rounded-circle"
-                                 width="30"
-                                 height="30" />
-                        </div>
-                        <div class="order-item">Pear</div>
-                    </div>
-                    <div class="pt-2 border-bottom mb-3"></div>
-                    <div class="d-flex justify-content-start align-items-center pl-3">
-                        <fieldset>
-                            <legend>Payment Method</legend>
-
-                            <div class="form__radios">
-                                <div class="form__radio">
-                                    <label for="visa">
-                                        <svg class="icon">
-                                            <use xlink:href="#icon-visa" />
-                                        </svg>Visa Payment
-                                    </label>
-                                    <input checked
-                                           id="visa"
-                                           name="payment-method"
-                                           type="radio" />
+                        
+                        <!--分隔線-->
+                        <div class="pt-2 border-bottom mb-3"></div>
+                        <!--付款選項-->
+                            <fieldset>
+                                <legend>請選擇付款方式</legend>
+                                <div class="row">
+                                    <div class="form__radio col mx-2">       
+                                        <label for="mastercard">
+                                            <i class="icon fa-regular fa-cash-register"></i>
+                                            內用結帳
+                                        </label>
+                                        <input id="mastercard" name="payment-method" type="radio" />
+                                    </div>
+                            <div class="form__radio col mx-2">
+                                        <label for="mastercard">
+                                            <i class="icon fa-regular fa-cash-register"></i>
+                                            線上結帳
+                                        </label>
+                                        <input id="mastercard" name="payment-method" type="radio" />
+                                    </div>
                                 </div>
-
-                                <div class="form__radio">
-                                    <label for="paypal">
-                                        <svg class="icon">
-                                            <use xlink:href="#icon-paypal" />
-                                        </svg>PayPal
-                                    </label>
-                                    <input id="paypal" name="payment-method" type="radio" />
+                            </fieldset>                         
+                        <!--折扣欄位-->  
+                        <div class="text-black py-2" style="font-weight:600;font-size:calc(1.275rem + .3vw)">折扣計算</div>
+                        </div>
+                        <div class="align-items-center pl-3 py-2 mb-2 border-bottom">
+                            <div class="row">
+                                <div class="col">
+                                    <div>會員等級折扣</div>
+                                    <div>優惠碼折扣</div>
                                 </div>
-
-                                <div class="form__radio">
-                                    <label for="mastercard">
-                                        <svg class="icon">
-                                            <use xlink:href="#icon-mastercard" />
-                                        </svg>Master Card
-                                    </label>
-                                    <input id="mastercard" name="payment-method" type="radio" />
+                                <div class="col">
+                                    <div class="text-end">-$100</div>
+                                    <div class="text-end">-$100</div>
                                 </div>
                             </div>
-                        </fieldset>
-                        <!-- <div class="text-muted">Payment Method</div>
-                        <div class="ml-auto">
-                          <img
-                            src="https://www.freepnglogos.com/uploads/mastercard-png/mastercard-logo-logok-15.png"
-                            alt=""
-                            width="30"
-                            height="30"
-                          />
-                          <label>Mastercard ******5342</label>
-                        </div> -->
-                    </div>
-                    <div class="d-flex justify-content-start align-items-center py-1 pl-3">
-                        <div class="text-muted">Shipping</div>
-                        <div class="ml-auto"><label>Free</label></div>
-                    </div>
-                    <div class="d-flex justify-content-start align-items-center pb-4 pl-3 border-bottom">
-                        <div class="text-muted">
-                            <button class="text-white btn">50% Discount</button>
                         </div>
-                        <div class="ml-auto price">-$34.94</div>
-                    </div>
-                    <div class="d-flex justify-content-start align-items-center pl-3 py-3 mb-4 border-bottom">
-                        <div class="text-muted">Today's Total</div>
-                        <div class="ml-auto h5">$34.94</div>
-                    </div>
-                    <div class="row border rounded p-1 my-3">
-                        <div class="col-md-6 py-3">
-                            <div class="d-flex flex-column align-items start">
-                                <b>Billing Address</b>
-                                <p class="text-justify pt-2">
-                                    James Thompson, 356 Jonathon Apt.220,
-                                </p>
-                                <p class="text-justify">New York</p>
-                            </div>
+                        <div class="align-items-center py-2 mb-2 border-bottom">
+                                <div class="row">
+                                    <div class="col">
+                                        <div>訂單總金額</div>
+                                        <div>折扣金額</div>
+                                        <div class="text-danger" style="font-size:larger">應付金額</div>
+                                    </div>
+                                    <div class="col">
+                                        <div class="text-end">$2,300</div>
+                                        <div class="text-end">-$200</div>
+                                        <div class="text-end text-danger" style="font-size:larger">$2,100</div>
+                                    </div>
+                                </div>
                         </div>
-                        <div class="col-md-6 py-3">
-                            <div class="d-flex flex-column align-items start">
-                                <b>Shipping Address</b>
-                                <p class="text-justify pt-2">
-                                    James Thompson, 356 Jonathon Apt.220,
-                                </p>
-                                <p class="text-justify">New York</p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="pl-3 font-weight-bold">Related Subsriptions</div>
-                    <div class="d-sm-flex justify-content-between rounded my-3 subscriptions">
-                        <div><b>#9632</b></div>
-                        <div>December 08, 2020</div>
-                        <div>Status: Processing</div>
-                        <div>Total: <b> $68.8 for 10 items</b></div>
+                    <button type="button" class="btn btn-danger" style="border-radius: 0.5em;">結帳</button>
                     </div>
                 </div>
             </div>
         </div>
-
+       </div>
     <!-- End Container -->
     
-</body>
-</html>
+</content_body>
 
-
+@section Scripts{
+    <script src="~/js/main.js"></script>
+    <script src="~/font-awesome/js/all.min.js"></script>
+}
